# AutoParkGPT

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  EVALUATION.md  PROJECT_REQUIREMENTS.md  README.md  TASKS.md  alembic.ini  docker-compose.yml  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
data/static/: general_info.md  location.md  reservation_process.md  rules.md
docs/: STAGE4_PRESENTATION.md
eval/: __init__.py  dataset.py  evaluator.py  performance.py  retrieval_metrics.py  run.py
scripts/: demo.py  enable_studio_pna.py  loadtest.py
src/autoparkgpt/: __init__.py  container.py
src/autoparkgpt/application/: extraction.py  factory.py  prompts.py
src/autoparkgpt/application/dto/: __init__.py  chat.py
src/autoparkgpt/application/graphs/: __init__.py  chat_graph.py  nodes.py  orchestration.py  state.py  studio.py
src/autoparkgpt/application/use_cases/: __init__.py  approval_service.py  chat_service.py  reservation_workflow.py
src/autoparkgpt/domain/: exceptions.py
src/autoparkgpt/domain/entities/: __init__.py  reservation.py
src/autoparkgpt/domain/ports/: __init__.py  dynamic_data.py  embedding.py  guardrail.py  llm.py  notifications.py  reservation_recorder.py  reservation_repository.py  vector_store.py
src/autoparkgpt/domain/value_objects/: __init__.py  car_number.py  chat.py  dynamic_data.py  knowledge.py  reservation_period.py
src/autoparkgpt/infrastructure/: logging.py
src/autoparkgpt/infrastructure/config/: __init__.py  settings.py
src/autoparkgpt/infrastructure/embeddings/: __init__.py  factory.py  huggingface.py  voyage.py
src/autoparkgpt/infrastructure/guardrails/: __init__.py  patterns.py  pipeline.py
src/autoparkgpt/infrastructure/llm/: __init__.py  anthropic_adapter.py
src/autoparkgpt/infrastructure/notifications/: __init__.py  factory.py  logging_notifier.py  webhook_notifier.py
src/autoparkgpt/infrastructure/observability/: __init__.py  tracing.py
src/autoparkgpt/infrastructure/persistence/: __init__.py  database.py  dynamic_data.py  models.py  reservation_repository.py  seed.py
src/autoparkgpt/infrastructure/recording/: __init__.py  factory.py  file_recorder.py  mcp_recorder.py
src/autoparkgpt/infrastructure/vectorstore/: __init__.py  ingestion.py  loader.py  weaviate_store.py
src/autoparkgpt/interface/api/: __init__.py  admin.py  main.py  schemas.py
src/autoparkgpt/interface/api/static/: admin.html  chat.html
src/autoparkgpt/interface/cli/: main.py
src/autoparkgpt/mcp_server/: __init__.py  server.py
tests/: fakes.py
tests/unit/: test_container.py  test_settings.py
tests/unit/application/: test_approval.py  test_chat_graph.py  test_e2e_workflow.py  test_extraction.py  test_orchestration.py  test_studio.py
tests/unit/domain/: test_car_number.py  test_reservation.py  test_reservation_period.py  test_value_objects_misc.py
tests/unit/eval/: test_evaluator.py  test_metrics.py
tests/unit/infrastructure/: test_anthropic_adapter.py  test_embeddings.py  test_file_recorder.py  test_guardrails.py  test_ingestion.py  test_loader.py  test_mcp_recorder.py  test_notifications.py  test_persistence.py  test_tracing.py  test_weaviate_store.py
tests/unit/interface/: test_admin_api.py  test_api.py  test_cli.py
tests/unit/mcp/: test_mcp_server.py
