[project]
name = "autoparkgpt"
version = "0.1.0"
description = "Production-grade RAG parking-reservation chatbot (LangChain + LangGraph)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "AutoParkGPT Team" }]

# Runtime dependencies are split into optional groups so the core domain/application
# layers and the test suite can be installed and run without the heavy ML stack
# (torch/sentence-transformers) or external service clients.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "dependency-injector>=4.41",
]

[project.optional-dependencies]
# LLM + orchestration
llm = [
    "langchain-core>=0.3",
    "langchain-anthropic>=0.2",
    "langgraph>=0.2",
]
# Vector store + local embeddings
rag = [
    "weaviate-client>=4.6",
    "sentence-transformers>=3.0",
    "voyageai>=0.2",
    "langchain-text-splitters>=0.3",
]
# SQL persistence
sql = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
]
# HTTP API + CLI
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "httpx>=0.27",
]
# MCP server (Stage 3) — writes approved reservations to a file via MCP tools
mcp = [
    "mcp>=1.2",
]
# Everything needed to run the full app
all = [
    "autoparkgpt[llm,rag,sql,api,mcp]",
]
# Dev / test / quality tooling
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
    # LangGraph Studio / visual debugger (`langgraph dev`).
    "langgraph-cli[inmem]>=0.1.55",
]

[project.scripts]
autoparkgpt = "autoparkgpt.interface.cli.main:app"
autoparkgpt-mcp = "autoparkgpt.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoparkgpt"]

# --------------------------------------------------------------------------- #
# Tooling configuration
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# Alembic migration scripts are generated boilerplate — not linted to project rules.
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF", "ANN", "PL"]
ignore = [
    "ANN401", # allow typing.Any where deliberately used at framework boundaries
]

[tool.ruff.lint.isort]
known-first-party = ["autoparkgpt", "eval", "tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "PLR2004", "S101"]
# Typer/FastAPI use callables (Argument/Option/Depends) as parameter defaults by design.
"src/autoparkgpt/interface/**" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

# Third-party libraries without type stubs.
[[tool.mypy.overrides]]
module = [
    "weaviate.*",
    "sentence_transformers.*",
    "voyageai.*",
    "dependency_injector.*",
    "langgraph.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --cov=autoparkgpt --cov-report=term-missing"
filterwarnings = [
    # Third-party: Starlette's TestClient warns about httpx vs httpx2 — not our code.
    "ignore:Using `httpx` with `starlette.testclient`",
]

[tool.coverage.run]
branch = true
source = ["autoparkgpt"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "\\.\\.\\.",
]
